##################################################
 Revision history for Log::Log4perl
##################################################

1.09 (not yet released)
    *   (ms) Added $^S check in FAQ, as suggested by J. David Blackstone.

1.08 2006/11/18
    *   (ms) Applied test suite patch by Lars Thegler for 
             ancient perl 5.005_03.
    *   (ms) Applied patch by Jeremy Bopp to fix test suite running
             under Cygwin.
    *   (ms) Fixed documentation bug in L4p:Appender::File,
             s/recreate_signal/recreate_check_signal. Thanks to
             Todd Chapman and Robert Jacobson for reporting this.
    *   (ms) Fixed init(), which now deletes any config file watchers 
             left over from previous init_and_watch() calls. Reported
             by Andreas Koenig who saw sporadic errors in the test suite, 
             thanks!

1.07 2006/10/11
    *   (ms) Removed checks for unlink() in t/017Watch.t since they
             failed on win32.
    *   (ms) Fixed doc bug in Appender::File reported by Robert
             Jacobson.
    *   (ms) Added FAQ on why to use Log4perl and not another
             logging system on CPAN.
    *   (ms) Fixed %M, %L, etc. level in logcarp/cluck/croak/confess
             (thanks to Ateeq Altaf)
    *   (ms) Autocorrecting rootlogger/rootLogger typo
    *   (ms) Better warning on missing loggers in config sanity check

1.06 2006/07/18
    *   (ms) Applied patch by Robert Jacobson to fix day-of-year in
             DateFormat, which was off by one.
    *   (ms) Added FAQ on syslog
    *   (ms) umask values for the file appender are now also accepted 
             in octal form (0xxx).
    *   (ms) The file appender now accepts owner/group settings of
             newly created log files.
    *   (ms) Fixed appender cleanup, a bug caused composite appenders
             to be cleaned up during global destruction, which caused an
             ugly segfault with the Synchronized appender on FreeBSD.
