@@ -8,7 +8,7 @@ use strict;
 
 use Test;
 
-BEGIN { plan tests => 19 }
+BEGIN { plan tests => 20 }
 
 use Log::Log4perl qw(get_logger);
 use Log::Log4perl::DateFormat;
@@ -76,7 +76,7 @@ ok($formatter->format($GMTIME), "Mon Mon Mon Monday");
 # Day of Year
 ###########################################
 $formatter = Log::Log4perl::DateFormat->new("D DD DDD DDDD");
-ok($formatter->format($GMTIME), "238 238 238  238");
+ok($formatter->format($GMTIME), "238 238 238 0238");
 
 ###########################################
 # AM/PM
@@ -116,7 +116,10 @@ ok($formatter->format($GMTIME), "xx -- 'K' not (yet) implemented --");
 ###########################################
 $formatter = Log::Log4perl::DateFormat->new("DDD");
    # 1/1/2006
-ok($formatter->format(1136106000), "  1");
+ok($formatter->format(1136106000), "001");
+$formatter = Log::Log4perl::DateFormat->new("D");
+   # 1/1/2006
+ok($formatter->format(1136106000), "1");
 
 ###########################################
 # In conjunction with Log4perl
